[project]
name = "ai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langfuse>=4.6.1",
    "langgraph>=1.2.1",
    "llm-factory",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[tool.uv.sources]
llm-factory = { git = "https://github.com/shashankbiet/llm-factory" }
